apps/nexus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-svc
  namespace: tools
  labels:
    app.kubernetes.io/name: nexus
spec:
  type: ClusterIP
  selector:
    app: nexus
  ports:
    - name: http
      port: 8081
      targetPort: 8081
